--- a/index.html
+++ b/index.html
@@ -1,171 +1,201 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlowInfo - The New Era of Business Management</title>
-    <link rel="stylesheet" href="styles.css">
+f="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="FlowInfo - הדור החדש של ניהול עסקים">
+    <meta property="og:description" content="פתרונות אוטומציה מתקדמים ומערכות מבוססות בינה מלאכותית לעסקים בישראל.">
+    <meta property="og:image" content="assets/og-image.jpg">
+    <meta property="og:url" content="https://www.flowinfo.com">
+    <meta property="og:type" content="website">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <svg viewbox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path d="M10 90 Q 50 10 90 90" stroke="url(#logo-gradient)" stroke-width="5" fill="none"/>
-                <circle cx="10" cy="90" r="5" fill="#ff6b35"/>
-                <circle cx="90" cy="90" r="5" fill="#64ffda"/>
-                <defs>
-                    <linearGradient id="logo-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#ff6b35"/>
-                        <stop offset="100%" style="stop-color:#64ffda"/>
-                    </linearGradient>
-                </defs>
-            </svg>
+        <div class="container">
+            <div class="logo">
+                <img src="assets/Group 1.svg" alt="לוגו FlowInfo">
+            </div>
+            <nav aria-label="ניווט ראשי">
+                <ul>
+                    <li><a href="#services" aria-label="עבור לשירותים">שירותים</a></li>
+                    <li><a href="#product" aria-label="עבור למוצר">מוצרים</a></li>
+                    <li><a href="#blog" aria-label="עבור לבלוג">בלוג</a></li>
+                    <li><a href="#about" aria-label="עבור למידע אודותינו">אודות</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#product">Product</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
-        <section id="hero">
-            <h1>Welcome to the New Era of Business Management</h1>
-            <p>
-                Yes, it's possible now. AI-based intelligent systems and automation can 
-                respond to customers, manage schedules, update inventory, and even 
-                write marketing content - all without you having to touch a keyboard.
-            </p>
-            <button class="cta-button">Get Started Today</button>
-        </section>
-
-        <section id="services">
-            <div class="service">
-                <img src="Robot_Icon.svg" alt="AI agents icon">
-                <h3>AI agents</h3>
-                <p>Strategic AI integration for optimized operations. Focus on what matters most.</p>
-            </div>
-            <div class="service">
-                <img src="Sistem_Integration_Icon.svg" alt="Systems integration icon">
-                <h3>Systems integration</h3>
-                <p>Seamless connection of all business systems. Unified data for smarter decisions.</p>
-            </div>
-            <div class="service">
-                <img src="Content_Creation_Icon.svg" alt="Content creation icon">
-                <h3>Content creation</h3>
-                <p>Automated marketing content strategies. Strong online presence, effortlessly.</p>
+        <section class="hero-section" aria-labelledby="hero-heading">
+            <div class="container">
+                <h1 id="hero-heading">ברוכים הבאים לדור החדש של ניהול עסקים</h1>
+                <p>
+                    מערכות אינטליגנטיות מבוססות בינה מלאכותית ואוטומציה יכולות 
+                    להגיב ללקוחות, לנהל לוחות זמנים, לעדכן מלאי ואפילו 
+                    לכתוב תוכן שיווקי - הכל בלי שתצטרכו לגעת במקלדת.
+                </p>
+                <a href="#contact" class="cta-button">התחל עוד היום</a>
             </div>
         </section>
 
-        <section id="benefits">
-            <h2>Advanced Automation Solutions for Israeli Businesses</h2>
-            <div class="benefit-list">
-                <div class="benefit">
-                    <h3>Focus on Your Expertise</h3>
-                    <p>Allow yourself to return to what you do best.</p>
-                </div>
-                <div class="benefit">
-                    <h3>Significant Savings</h3>
-                    <p>Reduce operating costs by up to 40% and time spent on repetitive tasks by up to 70%.</p>
-                </div>
-                <div class="benefit">
-                    <h3>Order and Organization</h3>
-                    <p>Our design and information flow processes create order, transparency, and complete control over all business processes.</p>
-                </div>
-                <div class="benefit">
-                    <h3>Maximum Precision</h3>
-                    <p>Reduce human errors by 95% with intelligent automated systems.</p>
-                </div>
-                <div class="benefit">
-                    <h3>Free Up Time for Growth</h3>
-                    <p>Reallocate valuable resources to business development and strategy.</p>
-                </div>
-                <div class="benefit">
-                    <h3>Competitive Advantage</h3>
-                    <p>Lead in adopting the technology that will dominate the job market and gain a competitive edge.</p>
-                </div>
-            </div>
-            <button class="cta-button">Get Started Today</button>
-        </section>
-
-        <section id="how-it-works">
-            <h2>How Does It Work?</h2>
-            <div class="steps">
-                <div class="step">
-                    <span class="step-number">1</span>
-                    <p>We'll meet to understand your business's unique needs and map out existing processes.</p>
-                </div>
-                <div class="step">
-                    <span class="step-number">2</span>
-                    <p>We'll design and develop a customized automation system tailored to your specific business needs.</p>
-                </div>
-                <div class="step">
-                    <span class="step-number">3</span>
-                    <p>We'll start small and expand according to your needs, instilling order and organization at every stage.</p>
-                </div>
-                <div class="step">
-                    <span class="step-number">4</span>
-                    <p>We'll support you at every stage to ensure long-term success and maintain an orderly and efficient system.</p>
+        <section id="services" aria-labelledby="services-heading">
+            <div class="container">
+                <h2 id="services-heading">השירותים שלנו</h2>
+                <div class="services-grid">
+                    <div class="service">
+                        <img src="assets/AI_agent.svg" alt="" aria-hidden="true">
+                        <h3>סוכני בינה מלאכותית</h3>
+                        <p>אינטגרציה אסטרטגית של בינה מלאכותית לתפעול מיטבי. התמקדו במה שהכי חשוב.</p>
+                    </div>
+                    <div class="service">
+                        <img src="assets/Sistem_Integration_Icon.svg" alt="" aria-hidden="true">
+                        <h3>אינטגרציית מערכות</h3>
+                        <p>חיבור חלק של כל מערכות העסק. נתונים מאוחדים להחלטות חכמות יותר.</p>
+                    </div>
+                    <div class="service">
+                        <img src="assets/Content_Creation_Icon.svg" alt="" aria-hidden="true">
+                        <h3>יצירת תוכן</h3>
+                        <p>אסטרטגיות תוכן שיווקי אוטומטיות. נוכחות מקוונת חזקה, ללא מאמץ.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section id="news">
-            <h2>Latest News</h2>
-            <div class="news-container">
-                <div class="news-item">
-                    <h3>Latest News</h3>
-                    <p>Short description of the news article. More details will be available in the full article.</p>
+        <section id="benefits" aria-labelledby="benefits-heading">
+            <div class="container">
+                <h2 id="benefits-heading">פתרונות אוטומציה מתקדמים לעסקים בישראל</h2>
+                <div class="benefits-grid">
+                    <div class="benefit">
+                        <h3>התמקדו במומחיות שלכם</h3>
+                        <p>אפשרו לעצמכם לחזור למה שאתם עושים הכי טוב.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>חיסכון משמעותי</h3>
+                        <p>הפחיתו עלויות תפעול בעד 40% וזמן שמושקע במשימות חוזרות בעד 70%.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>סדר וארגון</h3>
+                        <p>תהליכי העיצוב וזרימת המידע שלנו יוצרים סדר, שקיפות ושליטה מלאה בכל תהליכי העסק.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>דיוק מקסימלי</h3>
+                        <p>הפחיתו טעויות אנוש ב-95% עם מערכות אוטומטיות חכמות.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>פנו זמן לצמיחה</h3>
+                        <p>הקצו מחדש משאבים יקרי ערך לפיתוח עסקי ואסטרטגיה.</p>
+                    </div>
+                    <div class="benefit">
+                        <h3>יתרון תחרותי</h3>
+                        <p>הובילו באימוץ הטכנולוגיה שתשלוט בשוק העבודה וקבלו יתרון תחרותי.</p>
+                    </div>
                 </div>
-                <div class="news-item">
-                    <h3>Latest News</h3>
-                    <p>Short description of the news article. More details will be available in the full article.</p>
+                <div class="center-button" style="margin-top: 20px; text-align: center;">
+                    <a href="#contact" class="cta-button">גלה עוד</a>
                 </div>
-                <div class="news-item">
-                    <h3>Latest News</h3>
-                    <p>Short description of the news article. More details will be available in the full article.</p>
+            </div>
+        </section>
+
+        <section id="how-it-works" aria-labelledby="how-it-works-heading">
+            <div class="container">
+                <h2 id="how-it-works-heading">איך זה עובד?</h2>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-content">
+                            <span class="step-number" aria-hidden="true">1</span>
+                            <p>ניפגש כדי להבין את הצרכים הייחודיים של העסק שלך ולמפות את התהליכים הקיימים.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-content">
+                            <span class="step-number" aria-hidden="true">2</span>
+                            <p>נתכנן ונפתח מערכת אוטומציה מותאמת אישית לצרכים הספציפיים של העסק שלך.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-content">
+                            <span class="step-number" aria-hidden="true">3</span>
+                            <p>נתחיל בקטן ונרחיב בהתאם לצרכים שלך, תוך הטמעת סדר וארגון בכל שלב.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-content">
+                            <span class="step-number" aria-hidden="true">4</span>
+                            <p>נתמוך בך בכל שלב כדי להבטיח הצלחה לטווח ארוך ולשמור על מערכת מסודרת ויעילה.</p>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="news" aria-labelledby="news-heading">
+            <div class="container">
+                <h2 id="news-heading">חדשות אחרונות</h2>
+                <div class="news-grid">
+                    <article class="news-item">
+                        <h3>פריצת דרך בבינה מלאכותית בניהול עסקים</h3>
+                        <p>התקדמויות אחרונות בבינה מלאכותית מחוללות מהפכה באופן שבו עסקים פועלים. למדו עוד על ההתפתחויות האחרונות.</p>
+                        <a href="#" class="read-more" aria-label="קרא עוד על פריצת הדרך בבינה מלאכותית">קרא עוד</a>
+                    </article>
+                    <article class="news-item">
+                        <h3>מקרה בוחן: סיפור הצלחה באוטומציה</h3>
+                        <p>גלו כיצד עסק מקומי הגדיל את היעילות ב-200% באמצעות פתרונות האוטומציה שלנו.</p>
+                        <a href="#" class="read-more" aria-label="קרא עוד על סיפור ההצלחה באוטומציה">קרא עוד</a>
+                    </article>
+                    <article class="news-item">
+                        <h3>וובינר קרוב: עתיד העבודה</h3>
+                        <p>הצטרפו לדיון פאנל המומחים שלנו על כיצד בינה מלאכותית ואוטומציה מעצבות את עתיד העבודה. הירשמו עכשיו!</p>
+                        <a href="#" class="read-more" aria-label="קרא עוד על הוובינר הקרוב">קרא עוד</a>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" aria-labelledby="contact-heading">
+            <div class="container">
+                <h2 id="contact-heading">צור קשר</h2>
+                <form>
+                    <input type="text" name="name" placeholder="שם מלא" required>
+                    <input type="email" name="email" placeholder="כתובת אימייל" required>
+                    <textarea name="message" placeholder="הודעה" required></textarea>
+                    <button type="submit" class="cta-button center-button">שלח</button>
+                </form>
             </div>
         </section>
     </main>
 
-    <footer id="footer">
-        <div class="footer-section">
-            <h3>Company</h3>
-            <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#careers">Careers</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Resources</h3>
-            <ul>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#case-studies">Case Studies</a></li>
-                <li><a href="#guides">Guides</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Legal</h3>
-            <ul>
-                <li><a href="#privacy-policy">Privacy Policy</a></li>
-                <li><a href="#terms-of-service">Terms of Service</a></li>
-                <li><a href="#security">Security</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Connect</h3>
-            <ul>
-                <li><a href="#"><img src="GitHub_Icon.svg" alt="GitHub Icon"></a></li>
-                <!-- Add more social media icons here -->
-            </ul>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>חברה</h3>
+                    <ul>
+                        <li><a href="#about" aria-label="מידע נוסף אודותינו">אודות</a></li>
+                        <li><a href="#careers" aria-label="הצטרפו לצוות שלנו">קריירה</a></li>
+                        <li><a href="#contact" aria-label="צרו איתנו קשר">צור קשר</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>משאבים</h3>
+                    <ul>
+                        <li><a href="#blog" aria-label="קראו את הבלוג שלנו">בלוג</a></li>
+                        <li><a href="#case-studies" aria-label="למדו ממקרי בוחן">מקרי בוחן</a></li>
+                        <li><a href="#guides" aria-label="גשו למדריכים שלנו">מדריכים</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>משפטי</h3>
+                    <ul>
+                        <li><a href="#privacy" aria-label="קראו את מדיניות הפרטיות שלנו">מדיניות פרטיות</a></li>
+                        <li><a href="#terms" aria-label="קראו את תנאי השימוש שלנו">תנאי שימוש</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2023 FlowInfo. כל הזכויות שמורות.</p>
+            </div>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
