--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-f="styles.css">
+<!DOCTYPE html>
+<html lang="he" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FlowInfo - הדור החדש של ניהול עסקים עם פתרונות אוטומציה מתקדמים ומערכות מבוססות בינה מלאכותית.">
+    <title>FlowInfo - הדור החדש של ניהול עסקים</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
